--- a/you-sannim/src/components/home/home.css
+++ b/you-sannim/src/components/home/home.css
@@ -72,8 +72,8 @@
 }
 
 .home__img {
-    /* background: url("../../assets//profile.jpg"); */
-    background: url("../../assets//me.JPG"); 
+    background: url("../../assets//S__2146313_0.jpg");
+    /* background: url("../../assets//me.JPG");  */
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
