--- a/you-sannim/src/components/about/about.css
+++ b/you-sannim/src/components/about/about.css
@@ -103,8 +103,8 @@
     }
 
     .about__wrap_button {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        /* display: grid; */
+        /* grid-template-columns: repeat(2, 1fr); */
     }
 
 }
