--- a/you-sannim/src/components/Portfolio/portfolio.css
+++ b/you-sannim/src/components/Portfolio/portfolio.css
@@ -68,7 +68,9 @@ img {
     background-color: var(--title-color-dark);
   }
 
-
+.portfolio__emailpass {
+    font-size: 12px;
+}
 
 @media screen and (max-width:992px) {
     .portfolio__container {
